# bios

./: .gitignore  Cargo.toml  Makefile  QUICKSTART.md  README.md  setup_arm7.sh
arm9/: Cargo.toml  arm9bios.ld  build.ps1  build.rs  pad.py  rust-toolchain.toml  size.ps1
arm9/.cargo/: config.toml
arm9/src/: audio.rs  bios.rs  cp15.rs  crc.rs  data.rs  decompress.rs  default_irq_handler.rs  lib.rs  math.rs  memory.rs  misc.rs  swi.rs  vectors.rs
