[workspace]
resolver = "2"
members = [
    "arm7",
    "arm9",
]

# Configuration partagée pour tous les BIOS
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yassine Mahroug"]
license = "GPL2"

[workspace.dependencies]
# Pas de dépendances pour du bare-metal

[profile.dev]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
strip = true
